--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,6 +1,9 @@
 name: Deploy Project
 
-on: push
+on: 
+  push:
+    branches:
+      - main
 
 jobs:
   test:
@@ -17,6 +20,7 @@ jobs:
       - name: Run Tests
         run: npm test
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
